# northstar

./: .gitignore  App.js  app.json  package-lock.json  package.json  streaming.js
MemoryCompanion/: App.tsx  README.md  app.json  babel.config.js  package.json
MemoryCompanion/android/: AndroidManifest.xml
NorthStar/: Info.plist  NorthStarApp.swift
NorthStar.xcodeproj/: project.pbxproj
NorthStar/Models/: AgentModels.swift  MemoryStore.swift
NorthStar/Services/: AgentOrchestrator.swift  CameraService.swift  (+4 more)
backend/: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  pyproject.toml
backend/docs/plans/: 2026-03-28-alzheimer-assistant.md
backend/prompts/: main_agent_system.md  observer_system.md
backend/server/: requirements.txt
backend/server/agents/: graph.py
backend/server/state/: __init__.py  models.py  store.py
backend/server/tools/: __init__.py  analyze_frame.py  calendar_tool.py  medication.py  routine.py  speech.py  state_query.py  weather.py
backend/src/: config.py  models.py  nexla_pipeline.py  server.py
backend/src/agent/: context.py  graph.py  prompts.py
backend/src/logging/: logger.py
backend/src/observer/: buffer.py  observer.py
backend/src/skills/: answer_question.py  calendar_read.py  calendar_write.py  call_emergency.py  medication.py  routine.py  speech.py  weather.py
backend/src/state/: store.py
backend/tests/: conftest.py  test_buffer.py  test_calendar_skills.py  test_context.py  test_logger.py  test_models.py  test_server.py
frontend/: App.js  app.json  package-lock.json  package.json  streaming.js
(+33 files in other folders)
